@@ -81,17 +81,19 @@ static int dispatch_thread(int core, int thread, int quant)
 			lsq_insert(uop);
 		
 		/* Another instruction dispatched */
+		uop->di_seq = ++CORE.di_seq;
 		p->di_stall[uop->specmode ? di_stall_spec : di_stall_used]++;
 		p->dispatched++;
 		THREAD.dispatched++;
 		quant--;
 
-		/* Debug */
+		/* Pipeline debug */
 		esim_debug("uop action=\"create\", seq=%llu, name=\"%s\","
-			" mop_name=\"%s\", mop_count=%d, mop_index=%d, mop_seq=%llu\n",
-			(long long unsigned) uop->seq, uop->name,
+			" mop_name=\"%s\", mop_count=%d, mop_index=%d,"
+			" stg_dispatch=1, in_rob=%u, in_iq=%u, in_lsq=%u\n",
+			(long long unsigned) uop->di_seq, uop->name,
 			uop->mop_name, uop->mop_count, uop->mop_index,
-			(long long unsigned) uop->mop_seq);
+			uop->in_rob, uop->in_iq, uop->in_lq || uop->in_sq);
 	}
 
 	return quant;
